	  problems with its being defined as the wrong type aren't
	  nano's fault.  Changes to handle_hupterm(), do_suspend(),
	  do_continue(), handle_sigwinch(), and cancel_command(). (DLR)
	- Since proto.h includes nano.h, and nano.h includes config.h
	  first, include proto.h first and remove redundant includes of
	  config.h in all non-header source files. (DLR)
- browser.c:
  do_browser()
	- When setting the width of each file, use the "?" operator
	  instead of an if/else clause. (DLR)
- chars.c:
  mbwidth()
	- If wcwidth() returns -1 for the character passed in, treat the
	  character as having the width of Unicode U+FFFD (Replacement
	  Character) instead of having a width of zero, since display
	  problems can crop up with the latter approach. (DLR)
  mbstrchr()
	- Detect the case where the character isn't found in the string
	  more accurately. (DLR)
- cut.c:
  cut_line()
	- Since placewewant will always be zero after the line is cut,
	  set it to zero directly instead of assigning it the value of
	  xplustabs(). (DLR)
- files.c:
  read_file()
	- Remove apparently unneeded logic to handle a case where
	  current is NULL, since it shouldn't be NULL there. (DLR)
  get_next_filename()
	- Store the value of digits(ULONG_MAX) in a static, since it
	  doesn't change and hence doesn't need to be recalculated.
	  (DLR)
- global.c:
  shortcut_init()
	- Change the description of the Meta-] shortcut to "Find
	  matching bracket", as it's clearer. (DLR)
- nano.c:
  version()
	- If DISABLE_WRAPPING is defined, the code in DISABLE_ROOTWRAP
	  #ifdefs isn't included, so don't display
	  "--disable-wrapping-as-root" in that case. (DLR)
  do_cont()
	- Rename to do_continue(), and rename parameter s to signal, for
	  consistency. (DLR)
  do_verbatim_input()
	- Move to text.c, since it's an advanced text-based operation.
	  (DLR)
- nano.h:
	- Readd MIN_EDITOR_COLS #define, set to 4. (DLR)
- proto.h:
	- Remove now-unused externs for currslen, shortcut_list,